k8s/gateway/gateway-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: one8pulse-gateway
  namespace: one8pulse
spec:
  replicas: 2
  selector:
    matchLabels:
      app: one8pulse
      component: gateway
  template:
    metadata:
      labels:
        app: one8pulse
        component: gateway
    spec:
      containers:
      - name: one8pulse-gateway
        image: public.ecr.aws/t3q3l4n7/backend/gateway:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 200m
            memory: 384Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: one8pulse-gateway-service
  namespace: one8pulse
spec:
  selector:
    app: one8pulse
    component: gateway
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
---
# This is the ONLY service that should be internet-facing.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: one8pulse-gateway-ingress
  namespace: one8pulse
  annotations:
    alb.ingress.kubernetes.io/group.name: one8pulse-internet-lb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:658548981947:certificate/d83e36ad-c6b5-43da-aefe-844cf88a67de
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    alb.ingress.kubernetes.io/healthcheck-port: "8080"
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "3"
    alb.ingress.kubernetes.io/success-codes: "200"
    kubernetes.io/ingress.class: alb
spec:
  rules:
  - host: api.one8pulse.devcloudzone.store
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: one8pulse-gateway-service
            port:
              number: 80
